--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,71 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ul {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+  list-style: none;
+}
+
+img {
+  display: block;
+}
+
+.container {
+  max-width: 1440px;
+  padding-left: 156px;
+  padding-right: 156px;
+}
+
+.head-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.top-line .container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.nav-container {
+  display: flex;
+  align-items: center;
+}
+
+.nav-container-list {
+  display: flex;
+  gap: 40px;
+}
+
+.nav-main-text .link {
+  display: block;
+  padding: 24px 0;
+}
+
+.nav-main-text .link:active {
+  border-bottom: 4px solid #404bbf;
+  border-radius: 2px;
+}
+
+.address-cont-list {
+  display: flex;
+  gap: 40px;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
@@ -10,11 +78,29 @@ body {
 a {
   text-decoration: none;
 }
-ul {
-  list-style: none;
-}
+
 button {
+  background-color: #4d5ae5;
   cursor: pointer;
+  text-transform: capitalize;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: inherit;
+  line-height: inherit;
+  letter-spacing: 0.04em;
+  color: #fff;
+  padding: 16px 32px;
+  border-radius: 4px;
+  border: none;
+  display: block;
+  margin: 0 auto;
+  min-width: 169px;
+}
+
+.button:hover,
+.button:focus {
+  background-color: #404bbf;
+  color: #fff;
 }
 
 .address-line .link {
@@ -33,13 +119,7 @@ button {
   color: #404bbf;
 }
 
-.button-text {
-  background-color: #4d5ae5;
-}
-.button-text:hover,
-.button-text:focus {
-  background-color: #404bbf;
-}
+/* logo */
 
 .logo-main {
   font-family: 'Raleway', sans-serif;
@@ -49,6 +129,7 @@ button {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  margin-right: 76px;
 }
 .top-line .logo-text {
   color: #2e2f42;
@@ -57,6 +138,8 @@ button {
   color: #f4f4fd;
 }
 
+/* button */
+
 .button-text {
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
@@ -64,6 +147,14 @@ button {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
+}
+
+.button-text {
+  background-color: #4d5ae5;
+}
+.button-text:hover,
+.button-text:focus {
+  background-color: #404bbf;
 }
 
 .nav-main-text {
@@ -88,6 +179,8 @@ button {
 
 .main-section {
   background: #2e2f42;
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 
 .main-section .main-title {
@@ -97,6 +190,9 @@ button {
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
+  max-width: 496px;
+  margin: 0 auto;
+  margin-bottom: 48px;
 }
 
 .text-title {
@@ -117,14 +213,6 @@ button {
   text-align: center;
 }
 
-.section-team-content {
-  background-color: #ffffff;
-}
-
-.section-team {
-  background: #f4f4fd;
-}
-
 .section-team .section-team-text {
   letter-spacing: 0.02em;
 }
@@ -139,14 +227,113 @@ button {
   color: #2e2f42;
 }
 
+/* feautures */
+
+.feat-list {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.feat-item {
+  width: calc((100% - 72px) / 4);
+}
+
+.hidden-title {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+/* team */
+
+.section-team {
+  background: #f4f4fd;
+}
+
+.team-list {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+}
+
+.section-team-content {
+  background-color: #ffffff;
+  display: block;
+  width: calc((100% - 72px) / 4);
+  border-radius: 0 0 4px 4px;
+  overflow: hidden;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.section-team-content img {
+  object-fit: cover;
+}
+
+.team-con-text {
+  padding: 32px 0;
+  text-align: center;
+}
+/*
+.section-team-content .text-title {
+  text-align: center;
+}
+
+.section-team-content .section-team-text {
+  text-align: center;
+}
+*/
+
+/* portfolio */
+
+.port-list {
+  display: flex;
+  row-gap: 48px;
+  column-gap: wrap;
+  justify-content: center;
+}
+
+.port-card {
+  display: block;
+  width: calc((100% - 48px) / 3);
+}
+
+.port-card img {
+  overflow: hidden;
+}
+
+.port-con-text {
+  border: 1px solid #e7e9fc;
+  border-top: none;
+  padding: 32px 16px;
+}
+/* footer */
+
+.section-footer .logo-main {
+  margin-bottom: 16px;
+  display: inline-block;
+}
+
+.section-footer {
+  background: #2e2f42;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
 .footer-text {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
-}
-
-.section-footer {
-  background: #2e2f42;
+  max-width: 264px;
 }
