--- a/css/styles.css
+++ b/css/styles.css
@@ -24,9 +24,9 @@ img {
 }
 
 .container {
-  max-width: 1440px;
-  padding-left: 156px;
-  padding-right: 156px;
+  max-width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .head-container {
@@ -39,6 +39,10 @@ img {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+.top-line {
+  border-bottom: 1px solid #e7e9fc;
 }
 
 .nav-container {
