--- a/css/styles.css
+++ b/css/styles.css
@@ -309,10 +309,10 @@ a {
 .port-list {
   display: flex;
   row-gap: 48px;
-  column-gap: wrap;
+  column-gap: 24px;
   justify-content: center;
   column-gap: 28px;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap;*/
 }
 
 .port-card {
