--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,8 @@ ul {
 
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .container {
@@ -285,15 +287,6 @@ a {
   padding: 32px 0;
   text-align: center;
 }
-/*
-.section-team-content .text-title {
-  text-align: center;
-}
-
-.section-team-content .section-team-text {
-  text-align: center;
-}
-*/
 
 /* portfolio */
 
@@ -307,6 +300,14 @@ a {
   flex-wrap: wrap;
   row-gap: 48px;
   gap: 24px;
+}
+
+.port-list li {
+  margin-bottom: 48px;
+}
+
+.port-list li:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
 
 .port-card {
@@ -323,6 +324,7 @@ a {
   border-top: none;
   padding: 32px 16px;
 }
+
 /* footer */
 
 .section-footer .logo-main {
